fix more haml tamplates and a traslation bug

--- a/config/locales/fi_rest.yml
+++ b/config/locales/fi_rest.yml
@@ -55,7 +55,7 @@ fi:
 
     name: Koko nimesi
     email: Sähköpostiosoitteesi
-    arrival: Saapumispäivä
+    arriving: Saapumispäivä
     phone: Puhelinnumerosi
     nights: Öiden määrä 
     call: Soita 
