--- a/config/locales/en_rest.yml
+++ b/config/locales/en_rest.yml
@@ -57,7 +57,7 @@ en:
     comment: Comment
     confirmation: Booking request are subject to confirmation. Bookings over 1 night require a pre-payment of 25%.
     pay:  |-
-        If you wish to pay upon confirmation, our bank account is Nordea 101435-136318 <br/>
+        If you wish to pay upon confirmation, our bank account is Nordea FI61 1014 3500 1363 18 <br/>
         Payments may also be made by PayPal to our email info@villataika.fi <br/>  
         Otherwise the charge is due upon arrival and must be paid in cash.<br/> 
     pay_button: Pay 
