--- a/config/locales/fi_rest.yml
+++ b/config/locales/fi_rest.yml
@@ -63,7 +63,7 @@ fi:
     room_wish: Huonetoive
     comment: Huom!
     confirmation: Huonevaraus ei ole voimassa ennen kuin olette saaneet vahvistuksen siihen. 
-    pay:  Jos haluatte maksaa tilille, tilinumeromme on Nordea 101435-136318 / Villa Taika<br/> 
+    pay:  Jos haluatte maksaa tilille, tilinumeromme on Nordea FI61 1014 3500 1363 18 / Villa Taika<br/> 
           Paikanpäällä voi maksaa käteisellä tai kortilla.<br/> 
     pay_button: Maksa 
     submit: Lähetä varaus
