--- a/config/locales/de_rest.yml
+++ b/config/locales/de_rest.yml
@@ -61,7 +61,7 @@ de:
     comment: Kommentar
     confirmation: |-
         Die Buchung wird innerhalb eines Arbeitstages bestätigt. <br/>
-        Bei Buchungen von zwei oder mehr Nächten ist eine Anzahlung von 25% zur Buchungsbestätigung fällig.
+        Bei Buchungen von mehr als zwei Nächten ist eine Anzahlung von 25% zur Buchungsbestätigung fällig.
     pay:  |
            Sie könnnen nach der Bestätigung per Überweisung bezahlen: Kontonummer Nordea FI61 1014 3500 1363 18 <br/>
            oder per PayPal auf die email info@villataika.fi <br/>
