--- a/config/locales/en_rooms.yml
+++ b/config/locales/en_rooms.yml
@@ -5,99 +5,98 @@ en:
     one:
         Welcome to the charming and peaceful Villa Taika! <br/>
         We have created a unique B&amp;B, with 8 individually decorated rooms.
-        Inspired by our trips to the Orient , we brought that beauty and inspiration with us in the 
-        pieces of furniture, that we selected to our rooms. <br/> 
+        Inspired by our trips to the Orient , we brought that beauty and inspiration with us in the
+        pieces of furniture, that we selected to our rooms. <br/>
         We hope you will be revitalised and rested in the beauty of our surroundings! <br/>
 
         In the backyard we have a garden with the pond and waterfall.
-        You can relax in the garden by listening to the soothing sound of the water or make trips to the 
+        You can relax in the garden by listening to the soothing sound of the water or make trips to the
         nearby tourist sights.
         The Billnäs 15km, Mustio castle 15km, beautiful towns of Tammisaari 35 km and Hanko 65km
     two:
-        The room price is for two people, between 70 and 105€ , and extra beds cost 25€. <br/>
-        The price includes breakfast served between 8:30-10:00, bed-linen and towels. <br/>  
+        The room price is for two people, between 75 and 105€, and extra beds cost 25€. <br/>
+        The price includes breakfast served between 8:30-10:00, bed-linen and towels. <br/>
         You can sign into your room between 14-19 . Please let us know what time
         you'll be arriving! <br/>
         Checkout by 12 o'clock. <br/>
         Stays of 2 or more nights require 25% downpayment.
-    suites: 3 suites with own shower 95/105€
-    deluxe: 2 rooms with toilet ensuite 80€
-    standard: 2 rooms which share one shower 80€
+    suites: 3 suites with own shower 95/100/110€
+    deluxe: 2 rooms with toilet ensuite 85€
+    standard: 2 rooms which share one shower 85€
   tai: or
   puh: tel
   myos: See also
   slogan: asian elegance
-  suites: 
+  suites:
     short: Suites (w.shower)
-  deluxe: 
+  deluxe:
     short: Deluxe (w.toilet)
-  standard: 
+  standard:
     short: Standard (shared)
   index:
     short: Home
     bold: Asian elegance in the beauty of natural surroundings.
-    text:  is a charming Bed&Breakfast  and 
-              course-center in Antskog, near Fiskars, just one hours drive from Helsinki. 
+    text:  is a charming Bed&Breakfast  and
+              course-center in Antskog, near Fiskars, just one hours drive from Helsinki.
   green:
     short: Green room
     full: The <b>Green room</b>  is calm and peaceful room with a beautiful view of the garden. <br/>
-        There is a double bed  and it fits another spare bed. It also has a small little cove, which fits 
+        There is a double bed  and it fits another spare bed. It also has a small little cove, which fits
         a childs bed, and they love it.<br/>
         There is an en-suite wc, and it shares a shower with the next door Orange room.<br/>
-        Orange and Green room together are a very good choice for small groups, or large families, as there is 
+        Orange and Green room together are a very good choice for small groups, or large families, as there is
         also a small lounge for these two rooms. <br/>
-        The price for two is 80€ / Single 65€
+        The price for two is 85€ ; Single 70€
   orange:
     short: Orange room
     full: The <b>Orange room</b>  has a warm and cosy atmosphere, with a bright feel to it.<br/>
           There is a double bed and it can fit one adult or two children extra. <br/>
           The room has a en-suite wc and shares a shower with the next door Green room. <br/>
           From its second floor it has a beautiful view of the garden with its pond and surrounding nature. <br/>
-          Orange and Green room together are a good choice for small groups, or large families, as there is 
+          Orange and Green room together are a good choice for small groups, or large families, as there is
           also a small lounge for these two rooms.<br/>
-          The price for two is 80€.
+          The price for two is 85€.
   rose:
     short: Rose room
     full: The <b>Rose room </b> is a cosy room with a romantic atmosphere. <br/>
           It has a double bed and a cosy sofa for two. <br/>
           It shares a toilet and shower with the next door Sky room. <br/>
-          Together with the sky room it is an ideal choice for large families or small groups up to five, as 
+          Together with the sky room it is an ideal choice for large families or small groups up to five, as
           both rooms with their bathroom form an apartment.<br/>
-          The price for two is 80€/ Single 65€
+          The price for two is 85€; Single 70€
   sky:
     short: Sky room
     full: The <b>Sky room </b> is a  charming  room with a peaceful atmosphere. <br/>
            It shares a toilet and shower with the next door Rose room.  <br/>
-           Together with the sky room it is an ideal choice for large families or small groups up to five, as 
+           Together with the sky room it is an ideal choice for large families or small groups up to five, as
            both rooms with their bathroom form an apartment.<br/>
            There is a double bed, and space for an extra bed on request. <br/>
-           The price for two is 80€/ Single 65€
-  
+           The price for two is 85€; Single 70€
+
   lootus:
     short: Lotus Suite
-    full:  The <b>Lotus Suite</b>  is a charming and spacious flat of about 40 m², with asian elegance. <br/>  
+    full:  The <b>Lotus Suite</b>  is a charming and spacious flat of about 40 m², with asian elegance. <br/>
             It has it's own bathroom with shower and toilet, and a <b>private terasse</b>. <br/>
-            One can get a glimpse of the  nearby lake, and the terasse is a perfect place to enjoy the morning 
+            One can get a glimpse of the  nearby lake, and the terasse is a perfect place to enjoy the morning
             in the sun. <br/>
-            There is a double bed, and plenty of space for up to three extra beds on request. <br/> 
-            The suite is also very well suited for wedding couples. We offer a <b>wedding package</b> which includes 
-            extra decoration with flowers and candles, and breakfeast can be served privately 
+            There is a double bed, and plenty of space for up to three extra beds on request. <br/>
+            The suite is also very well suited for wedding couples. We offer a <b>wedding package</b> which includes
+            extra decoration with flowers and candles, and breakfeast can be served privately
             to the room or terasse.<br/>
-            The room price for two is 105€. (Weddingpackage is 150€)
+            The room price for two is 110€. (Weddingpackage 175€)
   sun:
-    short: Sun suite 
+    short: Sun suite
     full: The <b>Sun suite</b> is an elegant, sunny and spacious room. <br/>
-          Traditional timberframing gives the room a rustic touch which counterpoints the elegant 
+          Traditional timberframing gives the room a rustic touch which counterpoints the elegant
           interiour with beautiful teak furniture.<br/>
-          Facing south with large windows there is a sunny and light feeling in the room. Also it feels spacious 
-          as the ceilings are over 3m high.<br/> 
-          Shower and toilet are ensuite. 
+          Facing south with large windows there is a sunny and light feeling in the room. Also it feels spacious
+          as the ceilings are over 3m high.<br/>
+          Shower and toilet are ensuite.
           There is a double bed and a space to fit two extra beds.<br/>
-          The price for two is 95€/80€ single
+          The price for two is 100€; Single 85€
   saffron:
     short: Saffron Suite
     full: The <b>Saffron Suite</b> room is a sunny and elegant room with handcarved pillars. <br/>
           The room is south facing  with large windows and high ceiling that give it a spacious feel.<br/>
           There is a private bathroom with shower and a double bed. One or two extra beds can be arranged. <br/>
-          The price for two is 95€/80€ single
-  
+          The price for two is 95€; Single 80€
